[gd_scene load_steps=13 format=3 uid="uid://c04c00y3pyve7"]

[ext_resource type="Script" path="res://Attacks/enemy_laser.gd" id="1_3i5gs"]
[ext_resource type="Texture2D" uid="uid://dwvibgl671con" path="res://Assets/white.png" id="2_qe0aw"]

[sub_resource type="Curve" id="Curve_kk88v"]
_data = [Vector2(0, 0.829655), 0.0, 0.0, 0, 0, Vector2(0.993174, 0.354483), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_y8mfi"]
offsets = PackedFloat32Array(0, 0.540984, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8afvv"]
gradient = SubResource("Gradient_y8mfi")

[sub_resource type="Curve" id="Curve_mywxo"]
_data = [Vector2(0, 0.131868), 0.0, 0.0, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_omxr4"]
width = 34
curve = SubResource("Curve_mywxo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fruj8"]
particle_flag_disable_z = true
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
scale_curve = SubResource("CurveTexture_omxr4")
color_ramp = SubResource("GradientTexture1D_8afvv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u6i0u"]
particle_flag_disable_z = true
spread = 30.0
initial_velocity_min = 100.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
scale_curve = SubResource("CurveTexture_omxr4")
color_ramp = SubResource("GradientTexture1D_8afvv")

[sub_resource type="Curve" id="Curve_wot2r"]
_data = [Vector2(0.0133333, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_o1xy3"]
curve = SubResource("Curve_wot2r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_afwmn"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)
tangential_accel_min = 100.0
tangential_accel_max = 100.0
scale_min = 0.01
scale_max = 0.01
scale_curve = SubResource("CurveTexture_o1xy3")

[node name="EnemyLaser" type="RayCast2D" node_paths=PackedStringArray("line", "casting_particles", "collision_particles", "beam_particles")]
target_position = Vector2(1000, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("1_3i5gs")
line = NodePath("Line2D")
casting_particles = NodePath("CastingParticles")
collision_particles = NodePath("CollisionParticles")
beam_particles = NodePath("BeamParticles")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 24, 0)
width = 15.0
width_curve = SubResource("Curve_kk88v")
default_color = Color(0.980392, 0, 0.235294, 1)

[node name="CastingParticles" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_fruj8")
texture = ExtResource("2_qe0aw")
lifetime = 0.3

[node name="CollisionParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_u6i0u")
texture = ExtResource("2_qe0aw")

[node name="BeamParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_afwmn")
texture = ExtResource("2_qe0aw")
lifetime = 0.3

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
